Autocomplete dropdown is not toggled for some sites with multiple saved logins (on page load when the field is auto-focused)
Categories
(Toolkit :: Password Manager: Site Compatibility, defect, P2)
Tracking
()
People
(Reporter: tbabos, Assigned: enndeakin)
References
(Blocks 1 open bug, Regression, )
Details
(Keywords: regression)
Attachments
(3 files)
|
9.31 KB,
text/plain
|
Details | |
|
3.39 MB,
video/mp4
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-release+
|
Details | Review |
Unaffected version:
Firefox 70 Release
Affected platforms:
Mac OS 10.13
Ubuntu 16.04
Windows 10
Steps to reproduce:
- Launch Firefox
- Go to facebook.com and save 2 set of credentials
- Reload facebook
2.1. Go to imgur/signin and save 2 credentials
3.1. Reload the login form
Expected:
The autocomplete dropdown should be toggled due to the username field focus on page load
Actual:
The autocomplete dropdown is not automatically toggled. [Facebook]
The autocomplete dropdown is shown a glimpse and is closed [Imgur]
This works in FX70 correctly
Works on reddit.com and github
Regression-Range:
Found Bug 1573836 as the regressor. While it fixed Bug 1548575, seems like it also broke facebook and imgur (not sure how many other sites with field focus on load are affected by this)
| Reporter | ||
Comment 1•6 years ago
|
||
Comment 2•6 years ago
|
||
Not sure how this got missed in Fx72, but this doesn't sound good.
Updated•6 years ago
|
| Comment hidden (off-topic) |
| Assignee | ||
Updated•6 years ago
|
| Comment hidden (off-topic) |
| Assignee | ||
Comment 5•6 years ago
|
||
Updated•6 years ago
|
| Reporter | ||
Comment 6•6 years ago
|
||
This is also reproducible on vk.com.
Comment 7•6 years ago
|
||
Adding more sites to test against, once the bug gets fixed:
In private mode, on ok.ru and quoara.com, with one single login saved, the username being auto-focused, you will get the show-dismiss flicker.
| Reporter | ||
Comment 9•6 years ago
•
|
||
Adding livejasmin.com for verification.
Comment 10•6 years ago
|
||
| bugherder | ||
| Reporter | ||
Comment 11•6 years ago
|
||
Verified - fixed on latest Nightly 74.0a1 (2020-01-31) on Windows 10 x64, Ubuntu 18.04, MacOS 10.15 on following sites:
facebook.com
imgur.com
mail.ru
ok.ru
quora.com
livejasmin.com
vk.com
Waiting for Uplift to Beta.
Comment 13•6 years ago
|
||
Should this have gotten an approval request for 73? We're in RC week at this point, so please nominate for release approval if the answer is yes.
| Assignee | ||
Comment 14•6 years ago
|
||
Comment on attachment 9122735 [details]
Bug 1610539, don't perform focusing steps when attaching formfill to a document such as a subframe that isn't focused r=MattN
Beta/Release Uplift Approval Request
- User impact if declined: Some pages (such as facebook and imgur) don't display the autocomplete dropdown on load when multiple logins are present. Some pages with login forms flicker the autocomplete dropdown on load.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Should be low risk. Pages with child iframes were overriding the decision to show the autocomplete popup. Instead only the focused frame is used.
- String changes made/needed: None
Comment 15•6 years ago
|
||
Comment on attachment 9122735 [details]
Bug 1610539, don't perform focusing steps when attaching formfill to a document such as a subframe that isn't focused r=MattN
Fixes issues with the autocomplete dropdown not appearing on sites when it should. Approved for 73.0RC1.
Comment 16•6 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
Updated•6 years ago
|
| Reporter | ||
Comment 17•6 years ago
|
||
Verified fixed on Release Candidate 73.0 (ID: 20200203203546) on Windows 10, Mac OS 10.14 and Ubuntu 18.04.
Updated•6 years ago
|
Description
•