Bug 1610539 - Don't perform focusing steps when attaching formfill to a document such as a subframe that isn't focused. r=MattN, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D60882